--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@Wondersauce/ffmpeg-static-v7",
+  "name": "@wondersauce/ffmpeg-static-v7",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "exit 0"
   },
   "publishConfig": {
-    "@Wondersauce:registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com"
   },
   "keywords": [],
   "author": "",
