--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@wondersauce/ffmpeg-static-v7",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "exit 0"
   },
